# drinkard-backend

./: .env  Cargo.toml
db/migrations/: 20231020133145_create-users-table.sql
src/: authentication.rs  cors.rs  db.rs  game.rs  leaderboard.rs  main.rs
